[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for character tracking limit experiments"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
